--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой первый проект</title>
+    <title>Butterfly shop</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
                 <a href="index.html" class="header-logo">Butterfly</a>
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="#"></a>Каталог</li>
-                        <li><a href="#"></a>Отзывы</li>
+                        <li><a href="#">Каталог</a></li>
+                        <li><a href="#">Отзывы</a></li>
                         <li><a href="#">Контакты</a></li>
                         <li><a href="#">FAQ</a></li>
                     </ul>
