--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Butterfly shop</title>
+    <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="header-inner">
+        <div    class="header-inner">
             <div class="header-wrap">
                 <a href="index.html" class="header-logo">Butterfly</a>
                 <nav class="main-menu">
