--- a/www/index.html
+++ b/www/index.html
@@ -14,21 +14,22 @@
                 <a href="index.html" class="header-logo">Butterfly</a>
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="#">Каталог</a></li>
+                        <li><a href="#" class="btn">Каталог</a></li>
                         <li><a href="#">Отзывы</a></li>
                         <li><a href="#">Контакты</a></li>
                         <li><a href="#">FAQ</a></li>
                     </ul>
                 </nav>
-                <a href="tel:+" class="header-phone"></a>
             </div>
         </div>
     </header>
     <div class="promo">
-        <div class="promo-inner">
-            <h1 class="promo-ttl">Заголовок сайта</h1>
-            <p class="promo-slogan">Описание сайта, типа тут все самое офиггенное и опупенное!</p>
-        </div>
+        <!-- <div class="promo-inner"> -->
+            <div class="promo-visual">
+                <h1 class="promo-ttl">Индивидуальный пошив галсутков-бабочек</h1>
+            </div>
+            <!-- <p class="promo-slogan">Описание сайта, типа тут все самое офиггенное и опупенное!</p> -->
+        <!-- </div> -->
     </div>
 
     <script src="scripts/script.js"></script>
