сверстала часть services

--- a/www/index.html
+++ b/www/index.html
@@ -23,15 +23,33 @@
             </div>
         </div>
     </header>
-    <div class="promo">
-        <!-- <div class="promo-inner"> -->
-            <div class="promo-visual">
+
+    <main>
+        <div class="promo">
+            <!-- <div class="promo-inner"> -->
+            <div            class="promo-visual">
                 <h1 class="promo-ttl">Индивидуальный пошив галсутков-бабочек</h1>
+                <div class="btn">
+                    Заказать бабочку
+                </div>
             </div>
             <!-- <p class="promo-slogan">Описание сайта, типа тут все самое офиггенное и опупенное!</p> -->
-        <!-- </div> -->
-    </div>
-
+            <!-- </div> -->
+        </div>
+        <section class="services"> 
+            <div class="services-inner">
+               <h2>Наши работы</h2>
+                <div class="image">
+                <img class="img" src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке">
+                <img class="img" src="images/бабочки в упаковке.png" alt="Бабочки в упаковке">
+                <img class="img" src="images/мужик в бабочке.png" alt="Мужик в бабочке">
+                <img class="imag"  src="images/котик в бабочке.png" alt="Котик в розовой бабочке">
+                </div>
+            </div>
+            <div class="btn">Все бабочки
+            </div>
+        </section>
+    </main>
     <script src="scripts/script.js"></script>
 </body>
 </html>
