--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,8 @@
                     <ul>
                         <li><a href="works.html" class="btn">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
-                        <li><a href="#">Контакты</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="contacts.html">Контакты</a></li>
+                        <li><a href="FAQ.html">FAQ</a></li>
                     </ul>
                 </nav>
             </div>
