--- a/www/rewies.html
+++ b/www/rewies.html
@@ -1,11 +1,10 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Butterfly shop</title>
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/style.css">
+    <title>Document</title>
 </head>
 <body>
     <header  class="header">
@@ -16,8 +15,8 @@
                     <ul>
                         <li><a href="works.html" class="btn">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
-                        <li><a href="#">Контакты</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="contacts.html">Контакты</a></li>
+                        <li><a href="FAQ.html">FAQ</a></li>
                     </ul>
                 </nav>
             </div>
@@ -25,6 +24,25 @@
     </header>
 
     <main>
+       <section class="rewies">
+            <div class="rewies-inner">
+                <div class="rewies-wrap">
+                    <h1>Отзывы</h1>
+                    <div class="rewies-item">
+                        <div class="rewies-item-image">
+                            <img src="images/review.png" alt="Деловая тетка">
+                        </div>
+                        <div class="rewies-item-text">
+                            <h2>Лидия Ивановна</h2>
+                            <p>Пацаны красавчики! Быстро и аккуратно починили мой лододос!
+                                А так же вынесли за собой весь мусор! Еще и в шапке ходют - ван лав!</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+       </section>
+    
         <section class="order">
             <div class="order-inner">
                 <h2>Закажи пошив</h2>
@@ -63,5 +81,6 @@
         </div>
     </footer>
     <script src="scripts/script.js"></script>
+    
 </body>
 </html>
