сверстала страницу контакты

--- a/www/rewies.html
+++ b/www/rewies.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header  class="header">
@@ -13,7 +15,7 @@
                 <a href="index.html" class="header-logo">Butterfly</a>
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="works.html" class="btn">Каталог</a></li>
+                        <li><a href="catalog.html" class="btn">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
                         <li><a href="FAQ.html">FAQ</a></li>
@@ -24,21 +26,24 @@
     </header>
 
     <main>
-       <section class="rewies">
+        <section class="rewies">
             <div class="rewies-inner">
+                <h2>Отзывы</h2>
                 <div class="rewies-wrap">
-                    <h1>Отзывы</h1>
+                    <img class="arrow" src="images/left.png" alt="Стрелка влево">
                     <div class="rewies-item">
-                        <div class="rewies-item-image">
+                        <div class="rewies-item-vision">
                             <img src="images/review.png" alt="Деловая тетка">
                         </div>
-                        <div class="rewies-item-text">
-                            <h2>Лидия Ивановна</h2>
-                            <p>Пацаны красавчики! Быстро и аккуратно починили мой лододос!
+                        <div class="rewies-wrap-info">
+                             <div class="rewies-item-text">
+                                <h3 class="rewies-item-text-ttl">Лидия Ивановна</h3>
+                                <p>Пацаны красавчики! Быстро и аккуратно починили мой лододо с!
                                 А так же вынесли за собой весь мусор! Еще и в шапке ходют - ван лав!</p>
+                            </div>
                         </div>
-
                     </div>
+                    <img class="arrow" src="images/right.png" alt="Стрелка вправо">
                 </div>
             </div>
        </section>
