--- a/www/FAQ.html
+++ b/www/FAQ.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <header  class="header">
+        <div class="header-inner">
+            <div class="header-wrap">
+                <a href="index.html" class="header-logo">Butterfly</a>
+                <nav class="main-menu">
+                    <ul>
+                        <li><a href="catalog.html" class="btn">Каталог</a></li>
+                        <li><a href="rewies.html">Отзывы</a></li>
+                        <li><a href="contacts.html">Контакты</a></li>
+                        <li><a href="FAQ.html">FAQ</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     
-
     <section class="order">
         <div class="order-inner">
             <h2>Закажи пошив</h2>
