--- a/www/catalog.html
+++ b/www/catalog.html
@@ -14,10 +14,10 @@
             <a href="index.html" class="header-logo">Butterfly</a>
             <nav class="main-menu">
                 <ul>
-                    <li><a href="#" class="btn">Каталог</a></li>
-                    <li><a href="#">Отзывы</a></li>
-                    <li><a href="#">Контакты</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="catalog.html" class="btn">Каталог</a></li>
+                    <li><a href="rewies.html">Отзывы</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                    <li><a href="FAQ.html">FAQ</a></li>
                 </ul>
             </nav>
         </div>
