--- a/www/contacts.html
+++ b/www/contacts.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <header  class="header">
+        <div class="header-inner">
+            <div class="header-wrap">
+                <a href="index.html" class="header-logo">Butterfly</a>
+                <nav class="main-menu">
+                    <ul>
+                        <li><a href="catalog.html" class="btn">Каталог</a></li>
+                        <li><a href="rewies.html">Отзывы</a></li>
+                        <li><a href="contacts.html">Контакты</a></li>
+                        <li><a href="FAQ.html">FAQ</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section class="contacts">
+        <div class="contacts-inner">
+            <h2>Наши контакты</h2>
+            <div class="contacts-wrap">
+                <div class="cities">
+                    <p>Санкт-Петербург</p>
+                    <p>Москва</p>
+                    <p>Великий Новгород</p>
+                </div>
+                <ul>
+                    <li>Спасский переулок, д. 14</li>
+                    <li>Тел: +7 812 800-8080</li>
+                    <li>Пн-Пт с 9-00 до 20-00</li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section class="order">
         <div class="order-inner">
             <h2>Закажи пошив</h2>
