--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
                 <a href="index.html" class="header-logo">Butterfly</a>
                 <nav class="main-menu">
                     <ul>
-                        <li><a href="works.html" class="btn">Каталог</a></li>
+                        <li><a href="catalog.html" class="btn">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
                         <li><a href="contacts.html">Контакты</a></li>
                         <li><a href="FAQ.html">FAQ</a></li>
@@ -34,7 +34,6 @@
             </div>
         </section>
         <section class="services">
-            <div class="sevices-inner">
                 <h2>Наши работы</h2>
                 <div class="image">
                     <figure class="services-figure">
@@ -65,27 +64,30 @@
                     </figure>
                 </div> 
                 <div class="btn">Все бабочки</div>
-            </div>
+         
         </section>
 
         <section class="order">
             <div class="order-inner">
-                <h2>Закажи пошив</h2>
-                <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
-                <form action="#" class="form">
-                    <div class="form-field">
-                        <label for="name" class="form-label">Ваше имя</label>
-                        <input name="name" id="name" type="text" placeholder="Иван Иванов"
-                        class="form-input">
-                    </div>
-                    <div class="form-field">
-                        <label for="phone" class="form-label">Телефон</label>
-                        <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
-                    </div>
-                    <div class="form-field">
-                        <button type="submit" class="btn">Заказать</button>
-                    </div>
-                </form>
+                <div class="order-wrap">
+                    <h2>Закажи пошив</h2>
+                    <p>Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет определиться с тканью.</p>               
+                    <form action="#" class="form">
+                        <div class="form-field">
+                            <label for="name" class="form-label">Ваше имя</label>
+                            <input name="name" id="name" type="text" placeholder="Иван Иванов"
+                            class="form-input">
+                        </div>
+                        <div class="form-field">
+                            <label for="phone" class="form-label">Телефон</label>
+                            <input name="phone" id="phone" type="text" placeholder="+78128008080" class="form-input">
+                        </div>
+                        <div class="form-field">
+                            <button type="submit" class="btn">Заказать</button>
+                        </div>
+                    </form>
+                </div>
+                
             </div>
         </section>
     </main>
