закончила верстку и адаптацию шапки

--- a/www/FAQ.html
+++ b/www/FAQ.html
@@ -24,6 +24,25 @@
             </div>
         </div>
     </header>
+    <section class="infomation">
+        <div class="information-inner">
+            <h2>Как мы работаем</h2>
+            <div class="information-wrap">
+                <div class="itm1">
+                    <p>Как можно оплатить заказ?</p>
+                    <img src="images/icon-plus.png" class="plus" alt="Знак плюс">
+                </div>
+                <div class="itm2">
+                    <p>Как получить готовый заказ?</p>
+                    <img src="images/icon-minus.png"  class="minus"  alt="Знак минус">
+                </div>
+                <div class="text">
+                    <p>Принимая во внимание показатели успешности, реализация намеченных плановых заданий является качественно новой ступенью распределения внутренних резервов и ресурсов. В частности, перспективное планирование в значительной степени обусловливает важность укрепления моральных ценностей. Имеется спорная точка зрения, гласящая примерно следующее: независимые государства представлены в исключительно положительном свете. Сложно сказать, почему активно развивающиеся страны третьего мира, вне зависимости от их уровня, должны быть разоблачены.</p>
+                    <p> Учитывая ключевые сценарии поведения, понимание сути ресурсосберегающих технологий требует определения и уточнения модели развития. Также как высокое качество позиционных исследований требует анализа поставленных обществом задач. А ещё интерактивные прототипы будут призваны к ответу.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <section class="order">
         <div class="order-inner">
