--- a/www/index.html
+++ b/www/index.html
@@ -20,18 +20,23 @@
                         <li><a href="FAQ.html">FAQ</a></li>
                     </ul>
                 </nav>
+                <button class="burger">
+                    <img src="images/cil_hamburger-menu.png" alt="Меню">
+                </button>
             </div>
         </div>
     </header>
 
     <main>
         <section class="promo">
-            <div class="promo-visual">
-                <h1 class="promo-ttl">Индивидуальный пошив галсутков-бабочек</h1>
-                <div class="btn">
+            
+                <div    class="promo-visual">
+                    <h1 class="promo-ttl">Индивидуальный пошив галсутков-бабочек</h1>
+                    <div class="btn">
                     Заказать бабочку
+                    </div>
                 </div>
-            </div>
+            
         </section>
         <section class="services">
                 <h2>Наши работы</h2>
