--- a/www/contacts.html
+++ b/www/contacts.html
@@ -33,11 +33,16 @@
                     <p>Москва</p>
                     <p>Великий Новгород</p>
                 </div>
-                <ul>
-                    <li>Спасский переулок, д. 14</li>
-                    <li>Тел: +7 812 800-8080</li>
-                    <li>Пн-Пт с 9-00 до 20-00</li>
-                </ul>
+                <div class="contacts-content">
+                    <ul>
+                        <li>Спасский переулок, д. 14</li>
+                        <li>Тел: +7 812 800-8080</li>
+                        <li>Пн-Пт с 9-00 до 20-00</li>
+                    </ul>
+                    <div class="map">
+                        <img src="images/map.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
