доделано выпадащее меню

--- a/www/catalog.html
+++ b/www/catalog.html
@@ -43,90 +43,90 @@
                 <div class="image">
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке">
-                            <figurecaption  class="caption">Бабочка такая</figurecaption>
+                            <a href="#"><img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке">
+                            <figurecaption  class="caption">Бабочка такая</figurecaption></a>
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке">
-                            <figurecaption  class="caption">Бабочка растакая</figurecaption>
+                            <a href="#"><img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке">
+                            <figurecaption  class="caption">Бабочка растакая</figurecaption></a>
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/мужик в бабочке.png" alt="Мужик в бабочке">
+                            <a href="#"><img src="images/мужик в бабочке.png" alt="Мужик в бабочке">
                             <figurecaption  class="caption">Бабочка сякая
-                            </figurecaption>
+                            </figurecaption></a>
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/котик в бабочке.png" alt="Котик в розовой бабочке">
+                            <a href="#"><img src="images/котик в бабочке.png" alt="Котик в розовой бабочке">
                         <figurecaption  class="caption">Кривая
-                            </figurecaption>
+                            </figurecaption></a>
                         </div>
                     </figure> 
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/мужик в сером костюме с бабочкой.png" alt="Мужик в сером костюме с бабочкой">
+                            <a href="#"><img src="images/мужик в сером костюме с бабочкой.png" alt="Мужик в сером костюме с бабочкой">
                             <figurecaption  class="caption">Бабочка такая
-                            </figurecaption>
+                            </figurecaption></a>
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/мужик с бутоньеркой и в бабочке.png" alt="Мужик с бутоньеркой и в бабочке"> 
+                            <a href="#"><img src="images/мужик с бутоньеркой и в бабочке.png" alt="Мужик с бутоньеркой и в бабочке">
                             <figurecaption  class="caption">Бабочка растакая
-                            </figurecaption> 
+                            </figurecaption></a>  
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/бабочка на голове ребенка.png" alt="Бабочка на голове ребенка"> 
+                            <a href="#"><img src="images/бабочка на голове ребенка.png" alt="Бабочка на голове ребенка">
                             <figurecaption  class="caption">
                             Бабочка сякая
-                            </figurecaption>
+                            </figurecaption></a> 
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/мужик в белой рубашке с бабочкой.png" alt="Mужик в белой рубашке с бабочкой">
+                            <a href="#"><img src="images/мужик в белой рубашке с бабочкой.png" alt="Mужик в белой рубашке с бабочкой">
                             <figurecaption  class="caption">
                            Кривая 
-                            </figurecaption>  
+                            </figurecaption></a>  
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/бабочки в упаковках.png" alt="Бабочки в упаковках">
+                            <a href="#"><img src="images/бабочки в упаковках.png" alt="Бабочки в упаковках">
                             <figurecaption  class="caption">
                             Бабочка такая 
-                            </figurecaption>
+                            </figurecaption></a>
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                           <img src="images/серая бабочка в коробочке.png" alt="Бабочки в упаковках">
+                            <a href="#"><img src="images/серая бабочка в коробочке.png" alt="Бабочки в упаковках">
                             <figurecaption  class="caption">
                            Бабочка растакая  
-                            </figurecaption> 
+                            </figurecaption></a> 
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/мужик в черной рубашке с бабочкой.png" alt="Мужик в черной рубашке с бабочкой">
+                            <a href="#"><img src="images/мужик в черной рубашке с бабочкой.png" alt="Мужик в черной рубашке с бабочкой">
                             <figurecaption  class="caption">
                             Бабочка сякая
-                            </figurecaption> 
+                            </figurecaption></a> 
                         </div>
                     </figure>
                     <figure class="services-figure">
                         <div class="figure-img">
-                            <img src="images/клоун в цветной бабочке.png" alt="Клоун в цветной бабочке">
+                            <a href="#"><img src="images/клоун в цветной бабочке.png" alt="Клоун в цветной бабочке">
                             <figurecaption  class="caption">
                             Кривая
-                            </figurecaption>
+                            </figurecaption></a>
                         </div>
                     </figure>
                 </div> 
@@ -174,9 +174,9 @@
                 </ul>
             </div>
         </div>
-    </footer>   
+    </footer> 
+    <script src="scripts/jquery-3.6.4.min.js"></script>  
     <script src="scripts/script.js"></script>
-    <script src="js/jQuery.js"></script>
-    
+   
 </body>
 </html>
