--- a/www/contacts.html
+++ b/www/contacts.html
@@ -92,8 +92,9 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/jquery-3.6.4.min.js"></script>
     <script src="scripts/script.js"></script>
-    <script src="js/jQuery.js"></script>
+    
     
 </body>
 </html>
