--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
         <div class="header-inner">
             <div class="header-wrap">
                 <a href="index.html" class="header-logo">Butterfly</a>
-                <nav class="main-menu">
+                <nav class="main-menu j-main-menu">
                     <ul>
                         <li><a href="catalog.html">Каталог</a></li>
                         <li><a href="rewies.html">Отзывы</a></li>
@@ -20,7 +20,7 @@
                         <li><a href="FAQ.html">FAQ</a></li>
                     </ul>
                 </nav>
-                <button class="burger">
+                <button class="burger j-burger">
                     <img src="images/cil_hamburger-menu.png" alt="Меню">
                 </button>
             </div>
@@ -36,31 +36,31 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section class="services services-main">
             <h2>Наши работы</h2>
             <div class="image">
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке">
+                        <a href="#"><img src="images/серая бабочка в коробочке.png" alt="Серая бабочка в коробочке"></a>
                         <figurecaption  class="caption">Бабочка такая</figurecaption>
                     </div>
                 </figure>
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке">
+                        <a href="#"><img src="images/бабочки в упаковке.png" alt="Бабочки в упаковке"></a>
                         <figurecaption  class="caption">Бабочка растакая</figurecaption>
                     </div>
                 </figure>
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <img src="images/мужик в бабочке.png" alt="Мужик в бабочке">
+                        <a href="#"><img src="images/мужик в бабочке.png" alt="Мужик в бабочке"></a>
                         <figurecaption  class="caption">Бабочка сякая
                         </figurecaption>
                     </div>
                 </figure>
                 <figure class="services-figure">
                     <div class="figure-img">
-                        <img src="images/котик в бабочке.png" alt="Котик в розовой бабочке">
+                        <a href="#"><img src="images/котик в бабочке.png" alt="Котик в розовой бабочке"></a>
                         <figurecaption  class="caption">Кривая
                         </figurecaption>
                     </div>
@@ -69,7 +69,7 @@
             <div class="btn">Все бабочки</div>
         </section>
 
-        <section class="order">
+        <section class="order order-separator">
             <div class="order-inner">
                 <div class="order-wrap">
                     <h2>Закажи пошив</h2>
@@ -110,8 +110,9 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/jquery-3.6.4.min.js"></script>
     <script src="scripts/script.js"></script>
-    <script src="js/jQuery.js"></script>
+    
     
 </body>
 </html>
