--- a/www/FAQ.html
+++ b/www/FAQ.html
@@ -30,19 +30,21 @@
         <section class="infomation">
             <div class="information-inner">
                 <h2>Как мы работаем</h2>
-                <div class="information-wrap">
-                    <div class="itm1">
-                        <p>Как можно оплатить заказ?</p>
-                        <a href="#"><img src="images/icon-plus.png" class="plus" alt="Знак плюс"></a> 
-                    </div>
-                    <div class="itm2">
-                        <p>Как получить готовый заказ?</p>
-                        <a href="#"><img src="images/icon-minus.png"  class="minus"  alt="Знак минус"></a> 
-                    </div>
-                    <div class="text">
-                        <p>Принимая во внимание показатели успешности, реализация намеченных плановых заданий является качественно новой ступенью распределения внутренних резервов и ресурсов. В частности, перспективное планирование в значительной степени обусловливает важность укрепления моральных ценностей. Имеется спорная точка зрения, гласящая примерно следующее: независимые государства представлены в исключительно положительном свете. Сложно сказать, почему активно развивающиеся страны третьего мира, вне зависимости от их уровня, должны быть разоблачены.</p>
-                        <p> Учитывая ключевые сценарии поведения, понимание сути ресурсосберегающих технологий требует определения и уточнения модели развития. Также как высокое качество позиционных исследований требует анализа поставленных обществом задач. А ещё интерактивные прототипы будут призваны к ответу.</p>
-                    </div>
+                <div class="accordion">
+                    <button class="accordion-btn j-accordion-btn">
+                        Как можно оплатить заказ?
+                    </button> 
+                    <div class="accordion-answear">
+                        <p>Принимая во внимание показатели успешности, реализация намеченных плановых заданий является качественно новой ступенью распределения внутренних резервов и ресурсов. В частности, перспективное планирование в значительной степени обусловливает важность укрепления моральных ценностей. Имеется спорная точка зрения, гласящая примерно следующее: независимые государства представлены в исключительно положительном свете. Сложно сказать, почему активно развивающиеся страны третьего мира, вне зависимости от их уровня, должны быть разоблачены.</p> 
+                    </div> 
+                </div>
+                <div class="accordion">
+                    <button class="accordion-btn j-accordion-btn">
+                        Как получитьготовый заказ?
+                    </button>
+                    <div class="accordion-answear">
+                        <p> Учитывая  ключевые сценарии поведения, понимание сути ресурсосберегающих технологий требует определения и уточнения модели развития. Также как высокое качество позиционных исследований требует анализа поставленных обществом задач. А ещё интерактивные прототипы будут призваны к ответу.</p>
+                    </div> 
                 </div>
             </div>
         </section>
